[gd_scene load_steps=6 format=2]

[ext_resource path="res://prog_art/kitten.png" type="Texture" id=1]
[ext_resource path="res://kitten/kitten.gd" type="Script" id=2]
[ext_resource path="res://kitten/sounds/mews4.wav" type="AudioStream" id=3]

[sub_resource type="CapsuleShape2D" id=1]
radius = 16.7548
height = 40.3565

[sub_resource type="Animation" id=2]
resource_name = "caught"
length = 0.3

[node name="Kitten" type="Area2D"]
collision_layer = 2
collision_mask = 2
script = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 1.05112, 0.420448 )
rotation = 1.5708
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/caught = SubResource( 2 )

[node name="Mew" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 3 )

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]
[connection signal="body_entered" from="." to="." method="_on_Kitten_body_entered"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
[connection signal="finished" from="Mew" to="." method="_on_Mew_finished"]
[connection signal="screen_exited" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_exited"]
